# Map-Overlay

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/intersections/: complicated_sample_test.txt  edge_case_another_nested_y.txt  edge_case_butterfly.txt  edge_case_close_parallel_lines.txt  edge_case_coordinate_axes_1.txt  edge_case_coordinate_axes_2.txt  edge_case_coordinate_axes_3.txt  edge_case_disappointed_face.txt  edge_case_grid_lines_with_single_oblique.txt  edge_case_horizontal_oblique_cross.txt  edge_case_horizontal_parallel.txt  edge_case_narrowing_downwards.txt  edge_case_nested_y.txt  edge_case_not_intersecting_but_close.txt  edge_case_origin_intersect_1.txt  edge_case_origin_intersect_2.txt  edge_case_origin_intersect_3.txt  edge_case_parallels_intersect_oblique.txt  edge_case_star.txt  edge_case_triangle_in_triangle.txt  edge_case_vertical_oblique_cross.txt  edge_case_vertical_parallel.txt  multi_horizontal_test.txt  oblique_parallel_lines.txt  parallel_lines.txt  polygon_approx_test.txt  rand1.txt  sample_test.txt  sample_test1.txt  sample_test2.txt  sample_test3.txt  sample_test4.txt  star_at_origin.txt  test.txt  test_degenerate_colinear_01.txt  test_degenerate_colinear_02.txt  test_degenerate_colinear_03.txt  test_degenerate_duplicates_01.txt  test_degenerate_zero_length_01.txt  (+18 more)
report/: algorithm.tex  conclusions.tex  implementation.tex  intro.tex  main.tex
src/: __main__.py  intersection.py  main.py
tests/: test_naive_intersection.py  test_overlay.py  test_sweep_line_intersection.py
(+38 files in other folders)
