[tool.poetry]
name = "mapoverlay"
version = "0.1.0"
description = ""
authors = ["ManuelaCorte <manu.cortepause@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.3"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.350"
ruff = "^0.2.1"
pre-commit = "^3.6.1"
pytest = "^8.0.0"
black = "^24.3.0"


[tool.ruff]

[tool.pyright]
venvPath = "."
venv = ".venv"

typeCheckingMode = "strict"

reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
